--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,8 +30,10 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762140.md#1">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761830.md#1">【翻墙必看】专家：习面临无解难题 应改弦易辙</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762023.md#1">港警强行终止元旦游行 辱骂狂踢路过青年</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762124.md#1">台直升机坠毁 参谋总长等8人已证实罹难</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761018.md#1">王友群：解体中共 万象更新</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761505.md#1">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761594.md#1">新年谢师恩 德国法轮功学员谈修大法美好</a><br>
@@ -40,8 +42,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761112.md#1">川普：希望在第二阶段协议完成贸易谈判</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761161.md#1">周晓辉：上波罗的海两国黑名单 中南海再受挫</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11714048.md#1">60国海外法轮功学员恭祝李洪志师父新年好</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761249.md#1">港民新年诉求不变 坚持反暴政不会退缩</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761256.md#1">中国华融债务危机 恐引台湾30档基金爆雷</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761923.md#1">12月财新制造业PMI降至51.5 为3个月低位</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761801.md#1">大陆17家上市公司控制人被抓 殃及百万投资者</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751710.md#1">【2019盘点】六大案 透视美中医疗领域新战场</a><br>
@@ -50,6 +50,8 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761329.md#1">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761290.md#1">山西老板遗书曝光  控诉滴滴黑车垄断</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760936.md#1">大陆民众新年感谢法轮功 问候李大师</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761249.md#1">港民新年诉求不变 坚持反暴政不会退缩</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761256.md#1">中国华融债务危机 恐引台湾30档基金爆雷</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761187.md#1">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1">视频：武汉飞台湾航班 检疫人员登机检疫</a><br>
@@ -86,10 +88,8 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752263.md#1">【2019盘点】华人关注的十大新闻</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758887.md#1">2019大陆车企关键字：下滑、亏损、停产</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758900.md#1">山东偷排污水管深埋入海口 污染令人震惊</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758889.md#1">黑龙江男子病重仍遭非法拘留 9天后病亡</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758753.md#1">【新闻看点】反渗透法剑指中共 看台湾民主路</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757478.md#1">港人感佩法轮功传真相 恭祝李大师新年好</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11755912.md#1">2019岁末 人权律师及异见人士遭密集抓捕</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756845.md#1">《拍案惊奇》2020台湾大选两类观点引关注</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756278.md#1">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756214.md#1">“秋雨之福教会”牧师王怡被重判9年</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758705.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/04/1103010952451164-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758705.md#1">华为：生存是2020第一要务 将淘汰10%主管</a><br>2019最后一天，华为轮值董事长徐直军 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758500.md#1">川普：1月15日我在白宫签第一阶段协议</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757425.md#1">中国银行：人民币将在6.75至7.35间震荡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756978.md#1">大陆近六千家P2P平台爆雷 波及270万投资者</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757250.md#1">南水北调运行5年 中共为何拟建后续工程？</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/4052978cc3c5f162f5f11cbea205abb6-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br>“大纪元新唐人媒体集团”12月21日举 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756072.md#1">中共利用升旗仪式欲染红费城 华人斥荒唐</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758277.md#1">中共统战渗透台湾 六大手段</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756804.md#1">【翻墙必看】新年之际武汉惊传SARS疫情</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747600.md#1">【2019盘点】中共监控之十大黑科技</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757756.md#1">防堵大陆肺炎疫情 台疾管署：持续落实检疫</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756631.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IANTnpj-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756631.md#1">传武汉爆发SARS疫情 7例病情危重</a><br>湖北武汉市最近公布一则紧急通告，称 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756555.md#1">山西一在建隧道坍塌 5人死亡1人被困</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757615.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/08/019-08-132.06-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757615.md#1">反对反渗透法 台统促党总裁：我就是中共同路人</a><br>台湾立法院31日审议“反渗透法”，数 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759266.md#1">特鲁多认为逮捕孟晚舟正确 美国力挺</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757910.md#1">反渗透法过关 专家吁加细则阻中共染红媒体</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758457.md#1">中共机关大院内窝藏卖淫点</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757804.md#1">反渗透法三读 受渗透介选最重可判5年刑</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>近日，有贴文称，沈阳航空航天大学一 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>中国外交部发言人耿爽的对外发言被外 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758889.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/11-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758889.md#1">黑龙江男子病重仍遭非法拘留 9天后病亡</a><br>黑龙江佳木斯市林苑小镇法轮功学员杨 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757478.md#1">港人感佩法轮功传真相 恭祝李大师新年好</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11755912.md#1">2019岁末 人权律师及异见人士遭密集抓捕</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756845.md#1">《拍案惊奇》2020台湾大选两类观点引关注</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756278.md#1">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758705.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/04/1103010952451164-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758705.md#1">华为：生存是2020第一要务 将淘汰10%主管</a><br>2019最后一天，华为轮值董事长徐直军 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758500.md#1">川普：1月15日我在白宫签第一阶段协议</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757425.md#1">中国银行：人民币将在6.75至7.35间震荡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756978.md#1">大陆近六千家P2P平台爆雷 波及270万投资者</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757250.md#1">南水北调运行5年 中共为何拟建后续工程？</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/4052978cc3c5f162f5f11cbea205abb6-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br>“大纪元新唐人媒体集团”12月21日举 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758753.md#1">【新闻看点】反渗透法剑指中共 看台湾民主路</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756072.md#1">中共利用升旗仪式欲染红费城 华人斥荒唐</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758277.md#1">中共统战渗透台湾 六大手段</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756804.md#1">【翻墙必看】新年之际武汉惊传SARS疫情</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747600.md#1">【2019盘点】中共监控之十大黑科技</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756631.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IANTnpj-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756631.md#1">传武汉爆发SARS疫情 7例病情危重</a><br>湖北武汉市最近公布一则紧急通告，称 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756555.md#1">山西一在建隧道坍塌 5人死亡1人被困</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757615.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/08/019-08-132.06-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757615.md#1">反对反渗透法 台统促党总裁：我就是中共同路人</a><br>台湾立法院31日审议“反渗透法”，数 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759266.md#1">特鲁多认为逮捕孟晚舟正确 美国力挺</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757910.md#1">反渗透法过关 专家吁加细则阻中共染红媒体</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758457.md#1">中共机关大院内窝藏卖淫点</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757804.md#1">反渗透法三读 受渗透介选最重可判5年刑</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>近日，有贴文称，沈阳航空航天大学一 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>中国外交部发言人耿爽的对外发言被外 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
