--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -32,6 +32,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank">马国民众声援三退大潮 谴责中共在港暴行</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-20190929-Mal-TD-IMG_2141-R-150x120.jpg" align ="left"></a>在刚过的周末（9月29日）下午，马来西亚退党服务中心义工们来到了首都吉隆坡市中心，在人山人海的武吉免登区（Bukit Bintang）举行集会，和民众一起声援3亿4千2百万退出共产党、共青团和少先队的“三退”勇士们；同时抗议中共黑手暴力攻击香港法轮功学员，制造流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 10:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank">中共篡政70年 凌晓辉：从反送中看到希望</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201150518552519-150x120.jpg" align ="left"></a>为了“国庆70周年”，本应与国同庆的人民却被控制，除了商场不能卖菜刀外，小饭馆被强制停业，医院不准收留病人，长安街附近的居民不能用燃气，甚至，上公厕都要实名登记……有评论表示，如今的中国不是中国人民的，所以这不是国庆，而是国殇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 6:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank">中共随时戒严 泛民及民阵4人发起十一大游行</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/WhatsApp_Image_2019-10-01_at_12417_AM@1200x1200-150x120.jpeg" align ="left"></a>9月30日下午，三名香港民主派前议员李卓人、何俊仁、梁国雄以及民阵副召集人陈皓桓宣布，四人将以个人身份，承接民阵原来游行路线，于10月1日下午1时由铜锣湾东角道集合，游行到中环遮打道行人专用区。他们表示，此为公民抗命举动，清楚法律后果。他们四人随时都有被捕的危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/24/n11608376.md#1" target="_blank">每日三退声明精选（2019/10/23）</a><br></h3>声明退出曾加入过的少先队组织。来美国五年了，在这里看到了真相，明白了大陆的宣传都是假的。自己有朋友修炼法轮功，2003年被非法关押在劳教所，去看望她时，看到她被戴上手铐和脚镣，这样对待她，想起她自己就想流泪。共产党太残忍了，迫害好人。自己也是受共产党迫害，因为不听共产党那一套，被免除公职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/23/n11606126.md#1" target="_blank">每日三退声明精选（2019/10/22）</a><br></h3>名字为化名，本人从小受到了党匪的宣传，认为入党是件“特别的光荣”。18岁去当兵入伍，军事成绩优秀，被发展为中共党员。退伍后，工作多年，发现这个共产党全是谎言。本人工作的内容也用党的宣传有关系，宣传的都是党的“丰功伟绩”，不坏的一律不许发表。近一年来，通过翻墙，看到了很多共产党的真相，也了解了一些法轮功的真相。对当初加入共产党特别特别的后悔，发自内心的要求退党.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/21/n11601707.md#1" target="_blank">每日三退声明精选（2019/10/20）</a><br></h3>本人之前由于生长、教育、家庭环境等原因，对社会主义、共产主义等左翼思潮和中共政权（包括与中共亲近的国外政权、政治人物、政治势力）心存幻想。如今随着阅历知识面增加逐渐认清左翼思潮和中共政权的本质和其历史上的种种暴行，现郑重声明退出先前（被学校强迫）加入的中国共产主义青年团、中国共产党少年先锋队等共产党周边组织，从此不再与共产党有任何瓜葛，并且坚定反对社会主义、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 12:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/20/n11599864.md#1" target="_blank">每日三退声明精选（2019/10/19）</a><br></h3>因为一次机会接触了翻墙，从此对中共的真相看清楚了。但是，对于中共的邪恶我可能真的是因为被骗得太久了还没体会到。这次反对送中加上习近平在尼泊尔充满仇恨的言论，让我对这个政权的印象真的完全颠覆了。什么宣传净是骗人，加上身边海外的华人一直都不可信赖，完全不讲真话。现在我决定在网路安全等级（可能是白名单）出来之前，赶快在这里，发出退出党团队的正式声明。我也看透了，大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月20日 11:59 AM							</td></tr>
@@ -50,6 +51,5 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/3/n11564323.md#1" target="_blank">每日三退声明精选（2019/10/02）</a><br></h3>香港反送中运动给人类带来的巨大收获之一是使中共的邪恶本质得以暴露得淋漓尽致，让全世界（特别是香港、台湾）进一步看清了中共的丑恶嘴脸及魔鬼本性。一个拥有法治传统的香港，仅仅因为有市民抗议活动，只用了三个月，就变成了失去一切监督的武装人员可以强奸、酷刑和秘密杀人的人间地狱？因为中共就是塔利班这样的恐怖组织！现在发生在香港的奸、杀、滥捕的所有疯狂行径，目的与塔利班.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/10/1/n11558853.md#1" target="_blank">每日三退声明精选（2019/09/30）</a><br></h3>尽管邪党的极力宣传国殇日，全国到处挂满血旗，人们还是看清共产党的末期与邪恶，我们声明退出中共一切组织，远离邪灵，选择光明。愿《九评》传的越来越广，愿所有被共产党毒害的人都能清醒认识其邪教本质，唾弃它，解体它，还人一个清明世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 11:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/30/n11556078.md#1" target="_blank">每日三退声明精选（2019/09/29）</a><br></h3>邪党过生日闹得鸡犬不宁，民营企业几天一检查，为了到达空气污染不太严重北京周围几百公里一周前就汽车限号出行，很多快递不许进京，往新疆的一切快递干脆停运，也许是发快递的公司怕惹麻烦以免被共产党处罚，虽然歌声不断街道插满红旗，我们从这紧张的空气中看到共产党的恐慌，真是做贼心虚，亡党在即。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月30日 11:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/29/n11553451.md#1" target="_blank">每日三退声明精选（2019/09/28）</a><br></h3>最近有机会到大陆以外的地方去看，看到了很多关于中共的历史真相，也看到了香港反送中的正义之举。早就看透中共，但是苦于自己不知道有这个途径，直到现在我才在这里退出党团队。生于乱世，有种责任。退出党团队，不与中共一起做恶，是在这个被中共搞乱的时代里我自己能够做的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
