--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -54,7 +54,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761256.md#1">中国华融债务危机 恐引台湾30档基金爆雷</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761187.md#1">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1">视频：武汉飞台湾航班 检疫人员登机检疫</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1">武汉飞抵台湾航班 检疫人员登机检疫</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761021.md#1">展望2020大陆经济：“三驾马车”全瘫</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760983.md#1">美中第二阶段贸易谈判 一个重中之重议题</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,091,485 人
+- 共 349,096,882 人
 ```
 </strong>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
