--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -3,7 +3,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11755245.md#1" target="_blank">都会男女会客室：父母反对年纪大男友</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11755245.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1003190818322175-150x120.jpg" align ="left"></a>世界上有一种伪善的人，他往往伤害善良纯真的灵魂，双亲的担忧是忠言逆耳，他们的初衷是不希望爱女受伤害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761930.md#1" target="_blank">英国小海豹“挥手打招呼” 萌度百分百</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-627801334-150x120.jpg" align ="left"></a>来自瑞典、旅居马尔他的摄影师西格森（Johan Siggeson）在英国东岸拍到一只侧躺的野生小海豹，它伸出小手，仿佛在挥手打招呼，十分可爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761648.md#1" target="_blank">如何点亮你家正门</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/door-2685019_1280-150x120.jpg" align ="left"></a>良好的户外照明不仅仅是展示您的家房子的最佳方式， 而且它确保任何来到您家的访客都可以感到安全舒适。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:21 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank">专栏作家分享三个实用生活小秘诀</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-158836001-150x120.jpg" align ="left"></a>只要按住苹果手机空格键（space bar），就可以将光标精确地移到想要去的位置。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:14 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank">生活小秘诀 苹果手机空格键还可这么用</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-158836001-150x120.jpg" align ="left"></a>只要按住苹果手机空格键（space bar），就可以将光标精确地移到想要去的位置。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank">家里装修期间如何“战地求生”？</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wall-416060_1280-150x120.jpg" align ="left"></a>家里装修浴室和厨房期间对谁来说都是很头疼的时期，有的人考虑搬出去住，但是这工作量大开支也大。如果实在要住在家里，看看地产资讯网Domain搜集的几点经验，帮您顺利度过这种“兵荒马乱”的日子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank">浴室装修专家给您七大提点</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/home-3593729_1280-150x120.jpg" align ="left"></a>翻新浴室的时候，看着各式各样的新潮花样是不是会挑花了眼，到底哪些是必须的，哪些是奢侈不必要的呢？房地产资讯网Domain收集了多位专家的意见，为读者提供了七个建议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank">家居格局规划应避免的五大错误</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/living-room-1085987_1280-150x120.jpg" align ="left"></a>设计新家的时候，如何最有效地规划空间的分割？地产资讯网Domain列出了人们常犯的五个错误。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:39 AM			</td></tr>
