--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -41,7 +41,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759305.md#1">展望2020：美中贸易协议中的变数</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762023.md#1">港警强行终止元旦游行 辱骂狂踢路过青年</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762124.md#1">台直升机坠毁 参谋总长等8人已证实罹难</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728852.md#1">《思想领袖》专访邵岚：必须反共捍卫价值观</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728852.md#1">【思想领袖】专访邵岚：必须反共捍卫价值观</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762029.md#1">新年北京昌平强拆 百余村民上访遭威胁</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762532.md#1">传中共暂停“沪伦通”计划 疑因英国挺香港</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762321.md#1">大陆2019年卖地金额创新高 16城市超千亿</a><br>
